# learn-fast-api

./: main.py  pyproject.toml
database/: crud.py  database.py  models.py  schemas.py
